config/samples/batch_v1alpha1_baselineadminnetworkpolicy.yaml
apiVersion: batch.policy.networking.k8s.io/v1alpha1
kind: BaselineAdminNetworkPolicy
metadata:
  name: baselineadminnetworkpolicy-sample
spec:
  # Add fields here
  foo: bar
