config/samples/policy.networking.k8s.io_v1alpha1_adminnetworkpolicy.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: adminnetworkpolicy-sample
spec:
  # Add fields here
  foo: bar
